@@ -1,3 +1,9 @@
+2003-06-04  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.5-cvs-b10
+
+	* Reworked user authentication in gallery_remote2.php to allow
+	  using users from embedding CMS. Only tested with PostNuke
+	  at the moment.
+
 2003-06-03  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b9
 
 	* Remove preg_* functions from search.php, in order to support
